[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/City/Indoors/MaterialsLibrary/DeskTop.png" type="Texture" id=1]
[ext_resource path="res://scenes/City/2D_WorldMap/Objects/SearchableItem.gd" type="Script" id=2]
[ext_resource path="res://scenes/_common/GUI/fonts/Vollkorn-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/_common/GUI/sfx/Box_lock_open.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/Items/collectables/2D/Paper2DPickup.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Items/collectables/2D/Bandage2DPickup.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.5, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 20 )

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="DynamicFont" id=4]
size = 28
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="DeskSearchable" type="StaticBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.638343, 0.638343 )
texture = ExtResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 2 )

[node name="InteractionLabel" type="Node2D" parent="."]
position = Vector2( -4, -15 )
scale = Vector2( 0.542161, 0.542161 )

[node name="PressF" type="Label" parent="InteractionLabel"]
material = SubResource( 3 )
margin_left = -8.0
margin_top = -24.0
margin_right = 32.0
margin_bottom = -5.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "[F]"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="PossibleItems" type="Node2D" parent="."]
visible = false

[node name="Pizza Coupon" parent="PossibleItems" instance=ExtResource( 5 )]
visible = false
item_details = {
"display_immediately": true,
"is_unique": true,
"item_name": "PizzaCoupon",
"notes_for_journal": "This coupon enttitles the bearer to 5 cents off a 12 inch pizze from Fusili Romano's",
"path_to_icon": "res://scenes/_common/GUI/icons/paper-h.png",
"path_to_popup_display_image": "res://scenes/Items/collectables/Paper_1.png",
"path_to_scene_for_PlayerController_Items": ""
}

[node name="Bandage" parent="PossibleItems" instance=ExtResource( 6 )]

[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
